--- a/spec/cassettes/article_details_for_trade_number.yml
+++ b/spec/cassettes/article_details_for_trade_number.yml
@@ -10,10 +10,10 @@
       xmlns:ins3="http://articles.datatype.tocinterface.cat.tecdoc.net" xmlns:ins4="http://carselection.datatype.tocinterface.cat.tecdoc.net"
       xmlns:ins5="http://datatype.cat.tecdoc.net" xmlns:ins6="http://axlesselection.datatype.tocinterface.cat.tecdoc.net"
       xmlns:ins7="http://motorselection.datatype.tocinterface.cat.tecdoc.net" xmlns:ins8="http://assemblygroupselection.datatype.tocinterface.cat.tecdoc.net"
-      xmlns:ins9="http://specialselection.datatype.tocinterface.cat.tecdoc.net"><env:Body><ins0:getAssignedArticlesByIds2Single><wsdl:in><wsdl:provider>330</wsdl:provider><wsdl:lang>lv</wsdl:lang><wsdl:country>lv</wsdl:country><wsdl:linkingTargetType>U</wsdl:linkingTargetType><wsdl:articleId>1539623</wsdl:articleId><wsdl:attributs>true</wsdl:attributs><wsdl:eanNumbers>true</wsdl:eanNumbers><wsdl:oeNumbers>true</wsdl:oeNumbers><wsdl:usageNumbers>true</wsdl:usageNumbers></wsdl:in></ins0:getAssignedArticlesByIds2Single></env:Body></env:Envelope>
+      xmlns:ins9="http://specialselection.datatype.tocinterface.cat.tecdoc.net"><env:Body><ins0:getDirectArticlesByIds2><wsdl:in><wsdl:provider>330</wsdl:provider><wsdl:lang>lv</wsdl:lang><wsdl:country>lv</wsdl:country><wsdl:articleId><wsdl:array><wsdl:ids>1539623</wsdl:ids></wsdl:array></wsdl:articleId><wsdl:attributs>true</wsdl:attributs><wsdl:eanNumbers>true</wsdl:eanNumbers><wsdl:oeNumbers>true</wsdl:oeNumbers><wsdl:usageNumbers>true</wsdl:usageNumbers></wsdl:in></ins0:getDirectArticlesByIds2></env:Body></env:Envelope>
     headers:
       soapaction:
-      - ! '"getAssignedArticlesByIds2Single"'
+      - ! '"getDirectArticlesByIds2"'
       content-type:
       - text/xml;charset=UTF-8
       content-length:
@@ -24,11 +24,11 @@
       message: OK
     headers:
       date:
-      - Wed, 01 Feb 2012 12:22:56 GMT
+      - Thu, 02 Feb 2012 10:00:21 GMT
       server:
       - Apache
       content-length:
-      - '2953'
+      - '3040'
       content-type:
       - text/xml;charset=utf-8
       x-cache:
@@ -38,18 +38,19 @@
       via:
       - 1.1 demo.makit.lv:8080 (squid/2.7.STABLE9)
     body: <?xml version="1.0" encoding="UTF-8"?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"
-      xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"><soapenv:Body><getAssignedArticlesByIds2SingleResponse
-      xmlns="http://webservicepilot.tecdoc.net/pegasus-2-0/services/TecdocToCatWL"><getAssignedArticlesByIds2SingleReturn
+      xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"><soapenv:Body><getDirectArticlesByIds2Response
+      xmlns="http://webservicepilot.tecdoc.net/pegasus-2-0/services/TecdocToCatWL"><getDirectArticlesByIds2Return
       xmlns=""><data><array><array><articleAttributes><array><array><attrBlockNo>0</attrBlockNo><attrId>212</attrId><attrIsConditional>false</attrIsConditional><attrIsInterval>false</attrIsInterval><attrName>Masa
       [kg]</attrName><attrShortName>Masa</attrShortName><attrSuccessorId xsi:nil="true"/><attrType>N</attrType><attrUnit>kg</attrUnit><attrValue>0,089</attrValue><attrValueId>4992976</attrValueId></array></array><empty>false</empty></articleAttributes><articleDocuments
-      xsi:nil="true"/><articleInfo xsi:nil="true"/><articlePrices xsi:nil="true"/><assignedArticle><articleAddName
-      xsi:nil="true"/><articleId>1539623</articleId><articleLinkId>0</articleLinkId><articleNo>4PK1217</articleNo><articleState>1</articleState><articleStateName>Norm&#x101;ls</articleStateName><hasAppendage>false</hasAppendage><hasAxleLink>false</hasAxleLink><hasCsGraphics>false</hasCsGraphics><hasDocuments>false</hasDocuments><hasLessDiscount>false</hasLessDiscount><hasMarkLink>false</hasMarkLink><hasMotorLink>false</hasMotorLink><hasOEN>true</hasOEN><hasPartList>false</hasPartList><hasPrices>false</hasPrices><hasSecurityInfo>false</hasSecurityInfo><hasUsage>false</hasUsage><hasVehicleLink>true</hasVehicleLink><packingUnit
-      xsi:nil="true"/><quantityPerPackingUnit xsi:nil="true"/></assignedArticle><directArticle
-      xsi:nil="true"/><documentData xsi:nil="true"/><eanNumber><array><array><eanNumber>4010858508609</eanNumber></array></array><empty>false</empty></eanNumber><immediateAttributs
+      xsi:nil="true"/><articleInfo xsi:nil="true"/><articlePrices xsi:nil="true"/><assignedArticle
+      xsi:nil="true"/><directArticle><articleAddName xsi:nil="true"/><articleId>1539623</articleId><articleName>&#x136;&#x12B;&#x13C;rievu
+      siksna</articleName><articleNo>4PK1217</articleNo><articleState>1</articleState><articleStateName>Norm&#x101;ls</articleStateName><brandName>CONTITECH</brandName><brandNo>31</brandNo><genericArticleId>305</genericArticleId><hasAppendage>false</hasAppendage><hasAxleLink>false</hasAxleLink><hasCsGraphics>false</hasCsGraphics><hasDocuments>false</hasDocuments><hasLessDiscount>false</hasLessDiscount><hasMarkLink>false</hasMarkLink><hasMotorLink>false</hasMotorLink><hasOEN>true</hasOEN><hasPartList>false</hasPartList><hasPrices>false</hasPrices><hasSecurityInfo>false</hasSecurityInfo><hasUsage>false</hasUsage><hasVehicleLink>true</hasVehicleLink><packingUnit
+      xsi:nil="true"/><quantityPerPackingUnit xsi:nil="true"/></directArticle><documentData
+      xsi:nil="true"/><eanNumber><array><array><eanNumber>4010858508609</eanNumber></array></array><empty>false</empty></eanNumber><immediateAttributs
       xsi:nil="true"/><immediateInfo xsi:nil="true"/><mainArticle xsi:nil="true"/><normalAustauschPrice
       xsi:nil="true"/><oenNumbers><array><array><blockNumber>1</blockNumber><brandName>AUDI</brandName><oeNumber>059260849D</oeNumber><sortNumber>1</sortNumber></array><array><blockNumber>1</blockNumber><brandName>PEUGEOT</brandName><oeNumber>575066</oeNumber><sortNumber>1</sortNumber></array><array><blockNumber>1</blockNumber><brandName>RENAULT</brandName><oeNumber>7700853990</oeNumber><sortNumber>1</sortNumber></array></array><empty>false</empty></oenNumbers><replacedByNumber
       xsi:nil="true"/><replacedNumber xsi:nil="true"/><usageNumbers><array><array><usageNumber>4
       PK 1216</usageNumber></array><array><usageNumber>4 PK 1217</usageNumber></array><array><usageNumber>4
       PK 1218</usageNumber></array><array><usageNumber>4 PK 1219</usageNumber></array></array><empty>false</empty></usageNumbers></array></array><empty>false</empty></data><status>200</status><statusText
-      xsi:nil="true"/></getAssignedArticlesByIds2SingleReturn></getAssignedArticlesByIds2SingleResponse></soapenv:Body></soapenv:Envelope>
+      xsi:nil="true"/></getDirectArticlesByIds2Return></getDirectArticlesByIds2Response></soapenv:Body></soapenv:Envelope>
     http_version: '1.0'
